policy-as-code/kyverno/policies/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: containers-must-have-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Containers must have resources.requests and resources.limits (cpu, memory)."
        foreach:
          - list: "request.object.spec.containers"
            pattern:
              resources:
                requests:
                  memory: "?*"
                  cpu: "?*"
                limits:
                  memory: "?*"
                  cpu: "?*"
